--- a/home.html
+++ b/home.html
@@ -476,7 +476,7 @@
                 </div>
             </div>
             <!-- Hình tròn gradient -->
-            <div class="position-absolute"
+            <div class="position-absolute d-none d-md-block"
                 style="right:-90px;bottom:-20px;width:72px;height:72px;border-radius:50%;background:linear-gradient(135deg,#51cda6 0%,#90e0ef 100%);box-shadow:0 2px 8px rgba(0,0,0,0.12);">
             </div>
         </div>
